# grouptrait

./: Cargo.toml  README.md  example.rs  grouptrait.rs
